# app/Models/MatchPlayer.php
@@ -4,9 +4,11 @@ namespace App\Models;
 
 use Database\Factories\MatchPlayerFactory;
 use Illuminate\Database\Eloquent\Attributes\Guarded;
+use Illuminate\Database\Eloquent\Collection;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Illuminate\Database\Eloquent\Relations\HasMany;
 
 /**
  * @property int $id
@@ -16,6 +18,8 @@ use Illuminate\Database\Eloquent\Relations\BelongsTo;
  * @property bool $is_creator
  * @property GameMatch $gameMatch
  * @property User $user
+ * @property Collection<int, MatchPoint> $servedMatchPoints
+ * @property Collection<int, MatchPoint> $wonMatchPoints
  */
 #[Guarded([])]
 class MatchPlayer extends Model
@@ -44,5 +48,15 @@ class MatchPlayer extends Model
     public function user(): BelongsTo
     {
         return $this->belongsTo(User::class);
+    }
+
+    public function servedMatchPoints(): HasMany
+    {
+        return $this->hasMany(MatchPoint::class, 'serve_player_id');
+    }
+
+    public function wonMatchPoints(): HasMany
+    {
+        return $this->hasMany(MatchPoint::class, 'win_point_player_id');
     }
 }
