# routes/api.php
@@ -4,8 +4,10 @@ use App\Http\Controllers\Api\Auth\LoginController;
 use App\Http\Controllers\Api\Auth\LogoutController;
 use App\Http\Controllers\Api\GameType\FormatsIndexController;
 use App\Http\Controllers\Api\GameType\IndexController as GameTypeIndexController;
+use App\Http\Controllers\Api\Match\ActualPointController;
 use App\Http\Controllers\Api\Match\FinishController;
 use App\Http\Controllers\Api\Match\StoreController;
+use App\Http\Controllers\Api\MatchPoint\UpdateController as MatchPointUpdateController;
 use App\Http\Controllers\Api\Player\IndexController as PlayerIndexController;
 use App\Http\Controllers\Api\User\CurrentUserController;
 use Illuminate\Support\Facades\Route;
@@ -25,5 +27,7 @@ Route::get('/game-types/{gameType}/formats', FormatsIndexController::class);
 Route::middleware('auth:sanctum')->group(function () {
     Route::get('/players', PlayerIndexController::class);
     Route::post('/matches', StoreController::class);
+    Route::get('/matches/{match}/actual-point', ActualPointController::class);
     Route::patch('/matches/{match}/finish', FinishController::class);
+    Route::patch('/match-points/{matchPoint}', MatchPointUpdateController::class);
 });
